<resources>
    <string name="app_name">IdCloud Sample App</string>
    <string name="default_notification_channel_id">default</string>

    <string name="toast_exit">Press Back again to Exit.</string>
    <string name="tab_title_enroll">Enroll user</string>
    <string name="tab_title_authentication">Authentication</string>
    <string name="tab_title_transaction">Sign transaction</string>
    <string name="tab_title_msp_frame">MSP Frame Reader</string>
    <string name="tab_title_settings">Settings</string>
    <string name="tab_title_gemalto_face_id">Gemalto Face ID</string>


    // Secure key pad + pin related stuff

    <string name="STRING_PIN_CHANGE_LABEL_ENTERY_PIN">Enter Pin</string>
    <string name="STRING_PIN_CHANGE_LABEL_FIRST">New Pin</string>
    <string name="STRING_PIN_CHANGE_LABEL_SECOND">Confirm Pin</string>
    <string name="STRING_PIN_CHANGE_FAILED_DIFFERENT">Entered passwords are different.</string>

    <string name="PIN_CHANGE_CAPTION">Change pin</string>
    <string name="PIN_CHANGE_DESCRIPTION">Pin was changed successfully.</string>
    <string name="FACE_ID_DESCRIPTION">FaceIdMessage</string>
    <string name="TOUCH_ID_DESCRIPTION">TouchIdMessage</string>
    <string name="PIN_CHANGE_FAILED">PIN change failed</string>
    <string name="PIN_CHANGE_NO_MATCH">PIN\'s do not match</string>
    <string name="KEYPAD_UNDERSCORE">_</string>
    <string name="KEYPAD_CHAR_DOT">●</string>

    // Push

    <string name="PUSH_APPROVE_QUESTION">Incoming message</string>
    <string name="PUSH_APPROVE_QUESTION_APPROVE">Approve</string>
    <string name="PUSH_APPROVE_QUESTION_DENY">Deny</string>
    <string name="PUSH_SENT">Request was successfully sent.</string>
    <string name="PUSH_STATUS_REGISTERED">Ready to receive notification:</string>
    <string name="PUSH_STATUS_PENDING">Registration in progress:</string>
    <string name="PUSH_PROCESSING">Fetching</string>
    <string name="PUSH_NOTHING_TO_FETCH">Nothing to fetch</string>
    <string name="PUSH_FCM_CHANNEL_NAME">MSP Frame Channel</string>
    <string name="PUSH_FCM_CHANNEL_DESCRIPTION">MSP Frame Communication Channel</string>

    // Common messages

    <string name="COMMON_MESSAGE_OK">OK</string>
    <string name="COMMON_MESSAGE_SUCCESS">Success</string>
    <string name="COMMON_MESSAGE_ERROR_CAPTION">Something went wrong.</string>
    <string name="COMMON_MSG_NO_CLIENT_ID">No client id is registered.</string>
    <string name="COMMON_MSG_MISSING_CLIENT_ID">Missing Client Id.</string>
    <string name="COMMON_MSG_NO_PUSH_TOKEN">Missing push token.</string>
    <string name="COMMON_MSG_UNSUPORTED_FRAME">Unsupported frame type.</string>
    <string name="COMMON_MSG_WRONG_COMPONENTS">Unexpected components count.</string>
    <string name="COMMON_MSG_WRONG_FRAME">Failed to parse frame.</string>

    // Auth mode options

    <string name="AUTH_MODE_TOUCH_ID_ENABLED">TouchId successfully enabled</string>
    <string name="AUTH_MODE_FACE_ID_ENABLED">FaceId successfully enabled</string>

    <string name="AUTH_MODE_TOUCH_ID_ENABLE">Enable TouchId</string>
    <string name="AUTH_MODE_TOUCH_ID_DISABLE">Disable TouchId</string>
    <string name="AUTH_MODE_FACE_ID_ENABLE">Enable FaceId</string>
    <string name="AUTH_MODE_FACE_ID_DISABLE">Disable FaceId</string>
    <string name="AUTH_MODE_GEM_FACE_ID_ENABLE">Enable Gemalto Face Id</string>
    <string name="AUTH_MODE_GEM_FACE_ID_DISABLE">Disable Gemalto Face Id</string>

    // Gemalto Face Id

    <string name="GEMALTO_FACE_ID_STATE_UNDEFINED">Undefined</string>
    <string name="GEMALTO_FACE_ID_STATE_NOT_SUPPORTED">Not supported</string>
    <string name="GEMALTO_FACE_ID_STATE_LICENSED">Licensed</string>
    <string name="GEMALTO_FACE_ID_STATE_UNLICENSED">Not licensed</string>
    <string name="GEMALTO_FACE_ID_STATE_INITED">Initialised</string>
    <string name="GEMALTO_FACE_ID_STATE_INIT_FAILED">Failed to init</string>
    <string name="GEMALTO_FACE_ID_STATE_READY">Ready to use</string>
    <string name="GEMALTO_FACE_ID_ENROLL">Enroll Face ID</string>
    <string name="GEMALTO_FACE_ID_UNENROLL">Unenroll Face ID</string>

    // Loading bar indicator

    <string name="LOADING_MESSAGE_SENDING">Sending…</string>
    <string name="LOADING_MESSAGE_VALIDATING">Verifying</string>
    <string name="LOADING_MESSAGE_SCANNING">Scanning</string>
    <string name="LOADING_MESSAGE_ENROLLING">Enrolling</string>
    <string name="LOADING_MESSAGE_REMOVING">Removing</string>
    <string name="LOADING_MESSAGE_PROCESSING">Processing</string>
    <string name="LOADING_MESSAGE_INIT">Initialising</string>
    <string name="LOADING_MESSAGE_VERIFYING_PIN">Verifying PIN</string>


    // OTP

    <string name="OTP_VALUE_CAPTION">OTP</string>
    <string name="ONE_TIME_PASSCODE_VALUE_CAPTION">Authentication</string>
    <string name="OTP_VALUE_DESCRIPTION_VALID">\n%s\n\nOTP is valid for next %ds.</string>

    // Designer

    <string name="ui_label_domain">Domain:</string>
    <string name="ui_label_enroll_with_qr">Enroll with QR Code</string>
    <string name="ui_label_enroll_manually">Enroll Manually</string>
    <string name="ui_label_user_id">User ID:</string>
    <string name="ui_label_registration_code">Registration Code:</string>
    <string name="ui_label_out_of_band">Out of Band</string>
    <string name="ui_label_out_of_band_ready">✔️</string>
    <string name="ui_label_in_band">In Band</string>
    <string name="ui_label_generate_otp">Generate an OTP using</string>
    <string name="ui_label_confirm_transaction">Confirm Transaction using</string>
    <string name="ui_label_generic_info">Generic info</string>
    <string name="ui_label_credentials">Credentials</string>
    <string name="ui_label_pin">Pin:</string>
    <string name="ui_label_token">Token:</string>
    <string name="ui_label_status">Status:</string>
    <string name="ui_label_generate_otp_alone">Generate OTP</string>
    <string name="ui_label_verify_finger">Verify fingerprint to continue</string>
    <string name="ui_label_touch_sensor">Touch sensor</string>
    <string name="ui_label_msp_frame_scanner">MSP Frame Scanner</string>


    <string name="ui_button_scan_and_enroll">Use QR code</string>
    <string name="ui_button_enroll">Enroll</string>
    <string name="ui_button_otp_pin">Pin</string>
    <string name="ui_button_otp_auth">Authentication</string>
    <string name="ui_button_otp_verify">Verify Online</string>
    <string name="ui_button_otp_sign">Sign transaction</string>
    <string name="ui_button_otp_pull">Pull message</string>
    <string name="ui_button_otp_open">Open message</string>
    <string name="ui_button_otp_face_id">Face Id</string>
    <string name="ui_button_otp_touch_id">Touch Id</string>
    <string name="ui_button_change_pin">Change PIN</string>
    <string name="ui_button_privacy_policy">Privacy &amp; Policy</string>
    <string name="ui_button_delete_token">Delete Token</string>
    <string name="ui_button_use_pin">USE PIN</string>
    <string name="ui_button_cancel">CANCEL</string>
    <string name="ui_button_msp_transfer">Money Transfer</string>
    <string name="ui_button_msp_atm">ATM</string>
    <string name="ui_label_offline_token">Offline Token</string>
    <string name="ui_label_login_using">Login using</string>
    <string name="ui_label_offline">Offline</string>
    <string name="ui_label_amount">Amount (in USD):</string>
    <string name="ui_label_beneficiary">Beneficiary:</string>
    <string name="ui_label_failed_attempts">Failed attempts:</string>
    <string name="ui_button_proceed">Proceed</string>
    <string name="ui_label_acme_sign">ACME Inc.</string>
    <string name="ui_label_amount_sign">15</string>

    // Server Messages
    <string name="message_subject_authentication">Please authenticate to login to the tutorial site.</string>
    <string name="message_subject_transaction">Please approve the transaction of $%amount to %beneficiary</string>
    <string name="message_not_found">Missing translation.</string>
    <string name="message_not_you">Not Initiated by you?</string>

    // Missing permissions
    <string name="ui_label_permissions_caption">Missing permission</string>
    <string name="ui_label_permissions_description">Please make sure, that non permission is permanently blocked in the settings.</string>
    <string name="ui_button_permissions">Ask for permissions</string>

    <string name="default_font" translatable="false">sans-serif-light</string>

    <!-- Font definitions for TypeFaceFactory -->
    <string name="gto_emt_font_regular" translatable="false">fonts/Roboto-Regular.ttf</string>
    <string name="gto_emt_font_light" translatable="false">fonts/Roboto-Light.ttf</string>
    <string name="gto_emt_font_medium" translatable="false">fonts/Roboto-Medium.ttf</string>
    <string name="gto_emt_font_bold" translatable="false">fonts/Roboto-Bold.ttf</string>

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="navigation_drawer_privacy">Privacy Policy</string>

    // side menu
    <string name="face_id">Face ID</string>
    <string name="touch_id">Touch ID</string>
    <string name="change_pin">Change Pin</string>
    <string name="verify_pin_network_issue">Failed to verify pin. Make sure your internet connection is working.</string>

    <string name="delete_token">Delete Token</string>

    <!-- Dialog -->
    <string name="delete_token_title">Delete token</string>
    <string name="delete_token_message">Do you want to remove provisioned token?</string>
    <string name="delete_token_oob_error">Failed to unregister push notification. Make sure your internet connection is working.</string>
    <string name="button_push_reject">Reject</string>
    <string name="button_push_approve">Approve</string>

    <!--Pin Rules-->
    <string name="pin_rule_error_identical">Pin rule violation.\nYou cannot reuse the last PIN.</string>
    <string name="pin_rule_error_length">Pin rule violation.\nA PIN rule that requires a PIN\'s length to be within a specific range.</string>
    <string name="pin_rule_error_palindrome">Pin rule violation.\nThe PIN cannot be a palindrome, like 12321.</string>
    <string name="pin_rule_error_series">Pin rule violation.\nThe PIN cannot be a serie, like 1234, 4321.</string>
    <string name="pin_rule_error_uniform">Pin rule violation.\nThe PIN cannot be uniform, like 11111.</string>
    <string name="pin_rule_error_unknown">Pin rule violation.\nThe PIN did not verify all the PIN rules.</string>


</resources>
