<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/ui_label_domain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_generic_info" />

    <TextView
        android:id="@+id/label_domain_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:gravity="start"
        android:text="@android:string/untitled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/label_status"
        app:layout_constraintTop_toTopOf="@+id/label_status" />

    <TextView
        android:id="@+id/label_generic_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/ui_label_generic_info"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/ui_label_user_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_status" />

    <TextView
        android:id="@+id/label_user_id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/untitled"
        app:layout_constraintStart_toStartOf="@+id/label_domain_value"
        app:layout_constraintTop_toTopOf="@+id/label_user_id" />

    <TextView
        android:id="@+id/label_credentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/ui_label_credentials"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_user_id" />

    <LinearLayout
        android:id="@+id/layout_credentials"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_credentials">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="200"
            android:paddingEnd="16dp">

            <Button
                android:id="@+id/button_toggle_face_id"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AUTH_MODE_FACE_ID_ENABLE" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="200"
            android:paddingStart="16dp">

            <Button
                android:id="@+id/button_toggle_touch_id"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AUTH_MODE_TOUCH_ID_ENABLE" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_pin_token"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_credentials">

        <LinearLayout
            android:id="@+id/layout_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="200"
            android:orientation="vertical"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/label_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/ui_label_pin"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/label_token"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="274dp" />

            <Button
                android:id="@+id/button_change_pin"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/ui_button_change_pin"
                tools:layout_editor_absoluteX="264dp"
                tools:layout_editor_absoluteY="309dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="200"
            android:orientation="vertical"
            android:paddingStart="16dp">

            <TextView
                android:id="@+id/label_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/ui_label_token"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="275dp" />

            <Button
                android:id="@+id/button_delete_token"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/ui_button_delete_token"
                tools:layout_editor_absoluteX="256dp"
                tools:layout_editor_absoluteY="503dp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/ui_button_privacy_policy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/AppTheme.Button2"/>

</android.support.constraint.ConstraintLayout>